--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -17,7 +17,7 @@
         <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
+                <a href="/html/index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -31,7 +31,7 @@
                                 <a class="nav-link a_li_header" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" href="produtos.html">Produtos</a>
+                                <a class="nav-link a_li_header" href="/html/produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
@@ -39,24 +39,24 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#marvel">Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#starwars">Star Wars</a>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star Wars</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <a href="carrinho.html"><img src="../images/icon_carrinho.svg" class="d-flex"
+                    <a href="/html/carrinho.html"><img src="../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
-                    <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
-                            src="../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
+                    <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="../images/icon_conta.svg"
+                            class="d-flex" style="width: 30px; filter: invert();"></a>
                 </div>
             </div>
         </nav>
@@ -106,27 +106,27 @@
                     data-bs-interval="3000" data-bs-pause="hove">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="./produtos.html#tlou">
+                            <a href="/html/produtos.html#tlou">
                                 <img src="../images/img_slider/tlou_slider.png" class="d-block w-100"></a>
                         </div>
                         <div class="carousel-item">
-                            <a href="./produtos.html#seresmito">
+                            <a href="/html/produtos.html#seresmito">
                                 <img src="../images/img_slider/seresMito_slider.png" class="d-block w-100"></a>
                         </div>
                         <div class="carousel-item">
-                            <a href="./produtos.html#dc">
+                            <a href="/html/produtos.html#dc">
                                 <img src="../images/img_slider/dc_slider.png" class="d-block w-100"></a>
                         </div>
                         <div class="carousel-item">
-                            <a href="./produtos.html#marvel">
+                            <a href="/html/produtos.html#marvel">
                                 <img src="../images/img_slider/marvel_slider.png" class="d-block w-100"></a>
                         </div>
                         <div class="carousel-item">
-                            <a href="./produtos.html#starwars">
+                            <a href="/html/produtos.html#starwars">
                                 <img src="../images/img_slider/starWars_slider.png" class="d-block w-100"></a>
                         </div>
                         <div class="carousel-item">
-                            <a href="./produtos.html#dragonball">
+                            <a href="/html/produtos.html#dragonball">
                                 <img src="../images/img_slider/dragonBall_slider.png" class="d-block w-100"></a>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
             <div class="col divs_funcoes_site">
                 <a href="personalizacao.html">
                     <div class="div_diferencial_site">
-                        <img src="..." alt="..." class="evento-img">
+                        <img src="../images/fundo_perso.svg" class="evento-img">
                         <div class="overlay"></div>
                         <div class="texto-sobre">Personalize sua miniatura</div>
                     </div>
@@ -418,49 +418,49 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="marvel">Marvel</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="./marvel/homemAranha.html">Homem-Aranha</a></li>
-                        <li class="mb-2"><a href="./marvel/homemFerro.html">Homem de Ferro</a></li>
-                        <li class="mb-2"><a href="./marvel/capitaoAmerica.html">Capitão América</a></li>
+                        <li class="mb-2"><a href="/html/marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a href="/html/marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a href="/html/marvel/capitaoAmerica.html">Capitão América</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="dc">DC</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="./dc/batman.html">Batman</a></li>
-                        <li class="mb-2"><a href="./dc/superman.html">Superman</a></li>
-                        <li class="mb-2"><a href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
+                        <li class="mb-2"><a href="/html/dc/batman.html">Batman</a></li>
+                        <li class="mb-2"><a href="/html/dc/superman.html">Superman</a></li>
+                        <li class="mb-2"><a href="/html/dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="db">Dragon Ball</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./dragonBall/goku.html" rel="noopener">Goku</a> </li>
-                        <li class="mb-2"> <a href="./dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
-                        <li class="mb-2"><a href="./dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                        <li class="mb-2"> <a href="/html/dragonBall/goku.html" rel="noopener">Goku</a> </li>
+                        <li class="mb-2"> <a href="/html/dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
+                        <li class="mb-2"><a href="/html/dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="tlou">The Last of Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./tlou/joel.html" rel="noopener">Joel</a> </li>
-                        <li class="mb-2"> <a href="./tlou/ellie.html" rel="noopener">Ellie</a> </li>
-                        <li class="mb-2"> <a href="./tlou/abby.html" rel="noopener">Abby</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/joel.html" rel="noopener">Joel</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/ellie.html" rel="noopener">Ellie</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/abby.html" rel="noopener">Abby</a> </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="star">Star Wars</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
-                        <li class="mb-2"> <a href="./starWars/yoda.html" rel="noopener">Yoda</a> </li>
-                        <li class="mb-2"> <a href="./starWars/leia.html" rel="noopener">Leia</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/yoda.html" rel="noopener">Yoda</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/leia.html" rel="noopener">Leia</a> </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="mito">Seres Mitológicos</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./seresMito/zeus.html" rel="noopener">Zeus</a> </li>
-                        <li class="mb-2"> <a href="./seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
-                        <li class="mb-2"> <a href="./seresMito/medusa.html" rel="noopener">Medusa</a>
+                        <li class="mb-2"> <a href="/html/seresMito/zeus.html" rel="noopener">Zeus</a> </li>
+                        <li class="mb-2"> <a href="/html/seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
+                        <li class="mb-2"> <a href="/html/seresMito/medusa.html" rel="noopener">Medusa</a>
                         </li>
                     </ul>
                 </div>
@@ -524,7 +524,7 @@
                     if (usuario) {
                         localStorage.setItem("usuarioLogado", JSON.stringify(usuario));
                         alert("Login realizado com sucesso!");
-                        window.location.href = "index.html"; 
+                        window.location.href = "index.html";
                     } else {
                         alert("E-mail ou senha incorretos!");
                     }
