--- a/miniverse/html/marvel/homemAranha.html
+++ b/miniverse/html/marvel/homemAranha.html
@@ -26,7 +26,7 @@
         <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="../index.html"><img src="../../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
+                <a href="/html/index.html"><img src="../../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -37,10 +37,10 @@
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link a_li_header" aria-current="page" href="/html/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" href="../produtos.html">Produtos</a>
+                                <a class="nav-link a_li_header" href="/html/produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
@@ -48,24 +48,24 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#marvel">Marvel</a>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#marvel">Marvel</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#starwars">Star
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star
                                             Wars</a> </li>
-                                    <li><a class="dropdown-item a_li_header" href="../produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <a href="../carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
+                    <a href="/html/carrinho.html"><img src="../../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
-                    <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
+                    <a href="/html/conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
                             src="../../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
                 </div>
             </div>
