--- a/miniverse/html/produtos.html
+++ b/miniverse/html/produtos.html
@@ -17,7 +17,7 @@
         <div class="line"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
+                <a href="/html/index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -28,10 +28,10 @@
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link a_li_header" aria-current="page" href="/html/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" href="produtos.html">Produtos</a>
+                                <a class="nav-link a_li_header" href="/html/produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
@@ -39,21 +39,21 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#marvel">Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#starwars">Star Wars</a>
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#starwars">Star Wars</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="/html/produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
-                    <a href="carrinho.html"><img src="../images/icon_carrinho.svg" class="d-flex"
+                    <a href="/html/carrinho.html"><img src="../images/icon_carrinho.svg" class="d-flex"
                             style="width: 30px; margin-right: 20px;  filter: invert();"></a>
                     <a href="conta.html" data-bs-toggle="modal" data-bs-target="#exampleModal"><img
                             src="../images/icon_conta.svg" class="d-flex" style="width: 30px; filter: invert();"></a>
@@ -76,7 +76,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Homem de Ferro</h5>
                             <p class="card-text">R$ 599,90</p>
-                            <a href="./marvel/homemFerro.html" class="btn button_marvel">Ver
+                            <a href="/html/marvel/homemFerro.html" class="btn button_marvel">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Capitão América</h5>
                             <p class="card-text">R$ 539,90</p>
-                            <a href="./marvel/capitaoAmerica.html" class="btn  button_marvel">Ver
+                            <a href="/html/marvel/capitaoAmerica.html" class="btn  button_marvel">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Homem-Aranha</h5>
                             <p class="card-text">R$ 519,90</p>
-                            <a href="./marvel/homemAranha.html" class="btn  button_marvel">Ver
+                            <a href="/html/marvel/homemAranha.html" class="btn  button_marvel">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Batman</h5>
                             <p class="card-text">R$ 569,90</p>
-                            <a href="./dc/batman.html" class="btn  button_dc">Ver
+                            <a href="/html/dc/batman.html" class="btn  button_dc">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Mulher-Maravilha</h5>
                             <p class="card-text">R$ 529,90</p>
-                            <a href="./dc/mulherMaravilha.html" class="btn  button_dc">Ver
+                            <a href="/html/dc/mulherMaravilha.html" class="btn  button_dc">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Goku</h5>
                             <p class="card-text">R$ 549,90</p>
-                            <a href="./dragonBall/goku.html" class="btn button_db">Ver
+                            <a href="/html/dragonBall/goku.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Vegeta</h5>
                             <p class="card-text">R$ 529,90</p>
-                            <a href="./dragonBall/vegeta.html" class="btn button_db">Ver
+                            <a href="/html/dragonBall/vegeta.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Piccolo</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./dragonBall/piccolo.html" class="btn button_db">Ver
+                            <a href="/html/dragonBall/piccolo.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Joel</h5>
                             <p class="card-text">R$ 539,90</p>
-                            <a href="./tlou/joel.html" class="btn button_tlou">Ver
+                            <a href="/html/tlou/joel.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Ellie</h5>
                             <p class="card-text">R$ 559,90</p>
-                            <a href="./tlou/ellie.html" class="btn button_tlou">Ver
+                            <a href="/html/tlou/ellie.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Abby</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./tlou/abby.html" class="btn button_tlou">Ver
+                            <a href="/html/tlou/abby.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Darth Vader</h5>
                             <p class="card-text">R$ 599,90</p>
-                            <a href="./starWars/darthVader.html" class="btn button_star">Ver
+                            <a href="/html/starWars/darthVader.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Yoda</h5>
                             <p class="card-text">R$ 519,90</p>
-                            <a href="./starWars/yoda.html" class="btn button_star">Ver
+                            <a href="/html/starWars/yoda.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Leia</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./starWars/leia.html" class="btn button_star">Ver
+                            <a href="/html/starWars/leia.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Zeus</h5>
                             <p class="card-text">R$ 569,90</p>
-                            <a href="./seresMito/zeus.html" class="btn button_seres">Ver
+                            <a href="/html/seresMito/zeus.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Minotauro</h5>
                             <p class="card-text">R$ 519,90</p>
-                            <a href="./seresMito/minotauro.html" class="btn button_seres">Ver
+                            <a href="/html/seresMito/minotauro.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -342,7 +342,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Medusa</h5>
                             <p class="card-text">R$ 539,90</p>
-                            <a href="./seresMito/medusa.html" class="btn button_seres">Ver
+                            <a href="/html/seresMito/medusa.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
         <div class="container py-4 py-md-5 px-4 px-md-3">
             <div class="row">
                 <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
-                        href="index.html" aria-label="Bootstrap"> <img src="../images/logo_miniverse_minimalista.png"
+                        href="/html/index.html" aria-label="Bootstrap"> <img src="../images/logo_miniverse_minimalista.png"
                             height="80" width="80">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
@@ -373,49 +373,49 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="marvel">Marvel</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="./marvel/homemAranha.html">Homem-Aranha</a></li>
-                        <li class="mb-2"><a href="./marvel/homemFerro.html">Homem de Ferro</a></li>
-                        <li class="mb-2"><a href="./marvel/capitaoAmerica.html">Capitão América</a></li>
+                        <li class="mb-2"><a href="/html/marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a href="/html/marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a href="/html/marvel/capitaoAmerica.html">Capitão América</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="dc">DC</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="./dc/batman.html">Batman</a></li>
-                        <li class="mb-2"><a href="./dc/superman.html">Superman</a></li>
-                        <li class="mb-2"><a href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
+                        <li class="mb-2"><a href="/html/dc/batman.html">Batman</a></li>
+                        <li class="mb-2"><a href="/html/dc/superman.html">Superman</a></li>
+                        <li class="mb-2"><a href="/html/dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="db">Dragon Ball</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./dragonBall/goku.html" rel="noopener">Goku</a> </li>
-                        <li class="mb-2"> <a href="./dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
-                        <li class="mb-2"><a href="./dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                        <li class="mb-2"> <a href="/html/dragonBall/goku.html" rel="noopener">Goku</a> </li>
+                        <li class="mb-2"> <a href="/html/dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
+                        <li class="mb-2"><a href="/html/dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="tlou">The Last of Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./tlou/joel.html" rel="noopener">Joel</a> </li>
-                        <li class="mb-2"> <a href="./tlou/ellie.html" rel="noopener">Ellie</a> </li>
-                        <li class="mb-2"> <a href="./tlou/abby.html" rel="noopener">Abby</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/joel.html" rel="noopener">Joel</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/ellie.html" rel="noopener">Ellie</a> </li>
+                        <li class="mb-2"> <a href="/html/tlou/abby.html" rel="noopener">Abby</a> </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="star">Star Wars</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
-                        <li class="mb-2"> <a href="./starWars/yoda.html" rel="noopener">Yoda</a> </li>
-                        <li class="mb-2"> <a href="./starWars/leia.html" rel="noopener">Leia</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/yoda.html" rel="noopener">Yoda</a> </li>
+                        <li class="mb-2"> <a href="/html/starWars/leia.html" rel="noopener">Leia</a> </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="mito">Seres Mitológicos</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="./seresMito/zeus.html" rel="noopener">Zeus</a> </li>
-                        <li class="mb-2"> <a href="./seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
-                        <li class="mb-2"> <a href="./seresMito/medusa.html" rel="noopener">Medusa</a>
+                        <li class="mb-2"> <a href="/html/seresMito/zeus.html" rel="noopener">Zeus</a> </li>
+                        <li class="mb-2"> <a href="/html/seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
+                        <li class="mb-2"> <a href="/html/seresMito/medusa.html" rel="noopener">Medusa</a>
                         </li>
                     </ul>
                 </div>
