--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -149,7 +149,7 @@
         <div class="row">
             <!-- Evento 1 -->
             <div class="col divs_funcoes_site">
-                <a href="./evento_sazonal.html">
+                <a href="/html/evento_sazonal.html">
                     <div class="div_diferencial_site_halloween">
                         <img src="../images/evento_sazonal/img_fundo_EveSaz.png" alt="Evento Sazonal"
                             class="evento-img_halloween">
