--- a/miniverse/html/produtos_halloween/jason.html
+++ b/miniverse/html/produtos_halloween/jason.html
@@ -102,7 +102,7 @@
                             <option value="3">3</option>
                         </select>
                     </div>
-                    <button class="botao-halloween">Comprar</button>
+                    <button class="botao-comprar">Comprar</button>
                 </div>
             </div>
         </div>
