--- a/miniverse/html/planos.html
+++ b/miniverse/html/planos.html
@@ -113,8 +113,8 @@
                     <p class="text_desconto card-text" style="font-size: 2vh; line-height: 2.3;">Uma miniatura pequena
                         exclusiva por mês<br>Acesso antecipado a novos lançamentos</p>
                     <p class="card-text" style="font-size: 2.5vh; margin-top: 120px; margin-bottom: 0%;">R$ 149,90/mês</p>
-                    <a href="/html/carrinho.html" class="btn btn-outline-success button"
-                        style="margin-top: 2%;">Assinar</a>
+                    <button onclick="assinarPlano('plano-heroi', 'Plano Herói', 149.90)"
+                        class="btn btn-outline-success button" style="margin-top: 2%;">Assinar</button>
                 </div>
             </div>
         </div>
@@ -128,7 +128,8 @@
                     <p class="text_desconto card-text" style="font-size: 2vh; margin-top: 5%; line-height: 2.3;">Uma miniatura média
                         exclusiva por mês <br> Desconto de 10% em outras compras</p>
                     <p class="card-text" style="font-size: 2.5vh; margin-bottom: 0%; margin-top: 106px;">R$ 249,90/mês</p>
-                    <a href="/html/carrinho.html" class="btn btn-outline-success button" style="margin: 2%;">Assinar</a>
+                    <button onclick="assinarPlano('plano-mestre-jedi', 'Plano Mestre Jedi', 249.90)"
+                        class="btn btn-outline-success button" style="margin: 2%;">Assinar</button>
                 </div>
             </div>
         </div>
@@ -143,8 +144,8 @@
                         exclusiva <br>Uma miniatura grande exclusiva <br> Detalhamento especial, base customizada <br>Frete
                         grátis + 15% de desconto em todo o site</p>
                     <p class="card-text" style="font-size: 2.5vh; margin-top: 22px; margin-bottom: 0%;">R$ 449,90/mês</p>
-                    <a href="/html/carrinho.html" class="btn btn-outline-success button"
-                        style="margin: 2%;">Assinar</a>
+                    <button onclick="assinarPlano('plano-lenda', 'Plano Lenda', 449.90)"
+                        class="btn btn-outline-success button" style="margin: 2%;">Assinar</button>
                 </div>
             </div>
         </div>
@@ -226,6 +227,63 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <script>
+        const API_URL = 'http://localhost:3000/api';
+
+        async function assinarPlano(id, nome, preco) {
+            try {
+                const response = await fetch(`${API_URL}/carrinho`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        id,
+                        nome,
+                        marca: 'Assinatura',
+                        preco,
+                        quantidade: 1,
+                        tipo: 'plano'
+                    })
+                });
+
+                if (response.ok) {
+                    mostrarNotificacao(`✅ ${nome} adicionado ao carrinho!`);
+                } else {
+                    const erro = await response.json();
+                    alert('Erro ao adicionar plano: ' + (erro.error || 'Tente novamente.'));
+                }
+            } catch (error) {
+                console.error('Erro ao assinar plano:', error);
+                alert('Erro ao conectar com o servidor!');
+            }
+        }
+
+        function mostrarNotificacao(mensagem) {
+            const anterior = document.querySelector('.notificacao-plano');
+            if (anterior) anterior.remove();
+
+            const notif = document.createElement('div');
+            notif.className = 'notificacao-plano';
+            notif.style.cssText = `
+                position: fixed; top: 80px; right: 20px;
+                background-color: #28a745; color: white;
+                padding: 15px 25px; border-radius: 5px;
+                box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+                z-index: 9999; font-size: 16px;
+                animation: slideIn 0.3s ease-out;
+            `;
+            notif.innerHTML = `${mensagem} &nbsp; <a href="/html/carrinho.html" style="color:white; font-weight:bold; text-decoration:underline;">Ver carrinho</a>`;
+            document.body.appendChild(notif);
+
+            setTimeout(() => { notif.remove(); }, 4000);
+        }
+
+        const style = document.createElement('style');
+        style.textContent = `
+            @keyframes slideIn { from { transform: translateX(400px); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        `;
+        document.head.appendChild(style);
+    </script>
 </body>
 
 </html>
